deploy: julianbrooks/comp2850-hci-mdbook@d1f41ffb6b50311e54a60fe3319cc118c7f6e0f1

--- a/wk07/wk7-lab1-ethics-inline-edit.html
+++ b/wk07/wk7-lab1-ethics-inline-edit.html
@@ -200,8 +200,8 @@
 <p><strong>Recommended</strong></p>
 <ul>
 <li><a href="https://design-system.service.gov.uk/components/error-message/">GOV.UK: Error Message Pattern</a></li>
-<li><a href="../../references/example-accessible-inline-edit.html">Example: Accessible Inline Edit</a> (worked example with code)</li>
-<li><a href="../../references/privacy-by-design.html">Privacy by Design</a> (ethics framework)</li>
+<li><a href="../references/example-accessible-inline-edit.html">Example: Accessible Inline Edit</a> (worked example with code)</li>
+<li><a href="../references/privacy-by-design.html">Privacy by Design</a> (ethics framework)</li>
 </ul>
 <hr />
 <h2 id="introduction"><a class="header" href="#introduction">Introduction</a></h2>
@@ -234,7 +234,7 @@
 <li>Documented ethical trade-offs in design decisions</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO3</strong>: Analyse ethical implications — evidenced by consent modal implementation</li>
 <li><strong>LO5</strong>: Create interface prototypes — evidenced by inline-edit feature</li>
