--- a/wk08/wk8-lab1-prototyping-constraints.html
+++ b/wk08/wk8-lab1-prototyping-constraints.html
@@ -217,7 +217,7 @@
 <li>Documented trade-offs in server-side vs client-side filtering</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO5</strong>: Create interface prototypes — evidenced by HTMX partials implementation</li>
 <li><strong>LO7</strong>: Analyse design constraints — evidenced by pagination trade-offs document</li>
@@ -231,8 +231,8 @@
 <p>Keep these references handy while you work:</p>
 <ul>
 <li><a href="references/pebble-cheatsheet.html">Pebble Cheatsheet</a></li>
-<li><code>../../references/template-map-week8.md</code> (visual map of the partials you are about to create)</li>
-<li><code>../../references/htmx-pattern-cheatsheet.md</code> (Active Search, OOB status, indicators)</li>
+<li><code>../references/template-map-week8.md</code> (visual map of the partials you are about to create)</li>
+<li><code>../references/htmx-pattern-cheatsheet.md</code> (Active Search, OOB status, indicators)</li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG/Navigation_and_orienting#pagination">MDN: Accessible Pagination Patterns</a></li>
 </ul>
 <blockquote>
@@ -311,7 +311,7 @@
     └── _pager.peb      ← Partial: pagination nav
 </code></pre>
 </blockquote>
-<p>We want a structure like the one in <code>../../references/template-map-week8.md</code>.</p>
+<p>We want a structure like the one in <code>../references/template-map-week8.md</code>.</p>
 <h3 id="11-base-layout"><a class="header" href="#11-base-layout">1.1 Base layout</a></h3>
 <p>Create <code>templates/_layout/base.peb</code> with the shared head, status region, skip link, Pico CSS, HTMX script, and utility classes. This keeps accessibility hooks (live region, focus outline, visually hidden class) in a single place.</p>
 <h3 id="12-task-item-partial"><a class="header" href="#12-task-item-partial">1.2 Task item partial</a></h3>
