--- a/wk08/wk8-lab2-routing-nojs-tradeoffs.html
+++ b/wk08/wk8-lab2-routing-nojs-tradeoffs.html
@@ -195,8 +195,8 @@
 </ul>
 <p>📖 <strong>Contextual</strong>:</p>
 <ul>
-<li>Review <a href="../../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> (OOB pattern)</li>
-<li>Review <a href="../../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li>Review <a href="../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> (OOB pattern)</li>
+<li>Review <a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
 <li>Review Week 7 Lab 1 inline edit implementation</li>
 </ul>
 <hr />
@@ -229,7 +229,7 @@
 <li>Verified accessibility of error states with keyboard and screen reader</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO7</strong>: Analyse design constraints — evidenced by no-JS parity testing + trade-offs doc</li>
 <li><strong>LO9</strong>: Apply inclusive design — evidenced by no-JS accessibility verification</li>
@@ -1127,7 +1127,7 @@ EOF
 <ul>
 <li>Verify all flows work (HTMX + no-JS)</li>
 <li>Ensure backlog is up to date</li>
-<li>Review <a href="../../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> to understand what data you'll collect</li>
+<li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> to understand what data you'll collect</li>
 </ul>
 <hr />
 <h2 id="further-reading--resources"><a class="header" href="#further-reading--resources">Further Reading &amp; Resources</a></h2>
@@ -1139,13 +1139,13 @@ EOF
 </ul>
 <h3 id="htmx-patterns"><a class="header" href="#htmx-patterns">HTMX Patterns</a></h3>
 <ul>
-<li><a href="../../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> — OOB status, confirmation, error handling</li>
+<li><a href="../references/htmx-pattern-cheatsheet.html">HTMX Pattern Cheatsheet</a> — OOB status, confirmation, error handling</li>
 <li><a href="https://htmx.org/examples/inline-validation/">HTMX: Validation Example</a> — Alternative inline pattern</li>
 <li><a href="https://htmx.org/attributes/hx-confirm/">HTMX: hx-confirm</a> — Confirmation dialogs</li>
 </ul>
 <h3 id="testing"><a class="header" href="#testing">Testing</a></h3>
 <ul>
-<li><a href="../../references/assistive-testing-checklist.html">Assistive Testing Checklist</a> — Weekly testing checklist</li>
+<li><a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a> — Weekly testing checklist</li>
 <li><a href="https://www.gov.uk/service-manual/technology/testing-with-assistive-technologies">GOV.UK: Testing with Assistive Technologies</a></li>
 <li><a href="https://webaim.org/articles/screenreader_testing/">WebAIM: Screen Reader Testing</a></li>
 </ul>
