--- a/wk10/wk10-lab1-analysis-prioritisation.html
+++ b/wk10/wk10-lab1-analysis-prioritisation.html
@@ -188,7 +188,7 @@
 <h2 id="before-lab-required-reading-15-mins"><a class="header" href="#before-lab-required-reading-15-mins">Before Lab: Required Reading (15 mins)</a></h2>
 <p>📖 <strong>Essential</strong>:</p>
 <ul>
-<li>Review <a href="../../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> (formulas for median, MAD, error rates)</li>
+<li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> (formulas for median, MAD, error rates)</li>
 <li>Review Week 9 Lab 2 findings (<code>wk09/lab-wk9/submission/task1-draft/05-findings.md</code>)</li>
 <li><a href="https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/">Nielsen: Prioritizing Web Usability Issues</a></li>
 </ul>
@@ -225,7 +225,7 @@
 <li>Created redesign brief with evidence chains</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO6</strong>: Apply iterative design — evidenced by data-driven prioritisation</li>
 <li><strong>LO8</strong>: Design and execute evaluation — evidenced by metric analysis</li>
@@ -1063,7 +1063,7 @@ EOF
 <h2 id="further-reading--resources"><a class="header" href="#further-reading--resources">Further Reading &amp; Resources</a></h2>
 <h3 id="essential"><a class="header" href="#essential">Essential</a></h3>
 <ul>
-<li>Review <a href="../../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> (formulas reference)</li>
+<li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> (formulas reference)</li>
 <li><a href="https://www.gov.uk/service-manual/measuring-success/using-data-to-improve-your-service">GOV.UK: Using data to improve your service</a></li>
 </ul>
 <h3 id="statistical-analysis"><a class="header" href="#statistical-analysis">Statistical Analysis</a></h3>
