--- a/wk11/wk11-lab1-studio-crit.html
+++ b/wk11/wk11-lab1-studio-crit.html
@@ -237,7 +237,7 @@
 <li>Documented crit insights for portfolio</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO11</strong>: Collaborate in teams — evidenced by peer critique participation</li>
 <li><strong>LO12</strong>: Demonstrate professionalism — evidenced by constructive feedback + respectful critique
