deploy: julianbrooks/comp2850-hci-mdbook@41180b70ffe9122985be6ea6080b495f183ef412

--- a/wk09/wk9-lab2-pilots-debrief-draft.html
+++ b/wk09/wk9-lab2-pilots-debrief-draft.html
@@ -195,9 +195,9 @@
 </ul>
 <p>📖 <strong>Quick reference</strong>:</p>
 <ul>
-<li><a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
-<li><a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
-<li><a href="../references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
+<li><a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
+<li><a href="/references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li><a href="/references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
 </ul>
 <hr />
 <h2 id="introduction-from-plan-to-data"><a class="header" href="#introduction-from-plan-to-data">Introduction: From Plan to Data</a></h2>
@@ -231,7 +231,7 @@ By the end of this session, you will have:</p>
 <li>Assembled draft Task 1 evidence pack</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="/references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO6</strong>: Apply iterative design — evidenced by pilot data → findings synthesis</li>
 <li><strong>LO8</strong>: Design and execute evaluation — evidenced by 4 pilot sessions + data</li>
@@ -982,7 +982,7 @@ EOF
 </ul>
 <p><strong>Before Week 10</strong>:</p>
 <ul>
-<li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> for analysis formulas</li>
+<li>Review <a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> for analysis formulas</li>
 <li>Refresh WCAG 2.2 guidelines for fixes (3.3.1, 4.1.3)</li>
 <li>Think about trade-offs: which fixes are quick wins vs major refactors?</li>
 </ul>
@@ -991,7 +991,7 @@ EOF
 <h3 id="essential"><a class="header" href="#essential">Essential</a></h3>
 <ul>
 <li>Review Week 9 Lab 1 (evaluation planning) for context</li>
-<li><a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> — Median, MAD, error rate formulas</li>
+<li><a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> — Median, MAD, error rate formulas</li>
 <li><a href="https://www.gov.uk/service-manual/user-research/analyse-a-research-session">GOV.UK: Analysing user research</a></li>
 </ul>
 <h3 id="hci-evaluation"><a class="header" href="#hci-evaluation">HCI Evaluation</a></h3>
