--- a/wk10/wk10-lab2-redesign-reverify-package.html
+++ b/wk10/wk10-lab2-redesign-reverify-package.html
@@ -189,8 +189,8 @@
 <p>📖 <strong>Essential</strong></p>
 <ul>
 <li>Review your redesign brief (<code>wk10/lab-wk10/docs/redesign-brief.md</code>)</li>
-<li>Review <a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
-<li>Skim the <a href="../references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
+<li>Review <a href="/references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li>Skim the <a href="/references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
 <li><a href="https://www.w3.org/WAI/WCAG22/quickref/">WCAG 2.2 Quick Reference</a> (sections 3.3, 4.1)</li>
 </ul>
 <p>📖 <strong>Contextual</strong>:</p>
@@ -228,7 +228,7 @@
 <li>Packaged Task 2 submission with before/after data</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="/references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO4</strong>: Evaluate for accessibility — evidenced by regression testing</li>
 <li><strong>LO6</strong>: Apply iterative design — evidenced by redesign → re-verification cycle</li>
@@ -960,9 +960,9 @@ EOF
 <h2 id="further-reading--resources"><a class="header" href="#further-reading--resources">Further Reading &amp; Resources</a></h2>
 <h3 id="essential"><a class="header" href="#essential">Essential</a></h3>
 <ul>
-<li>Review <a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
-<li>Skim the <a href="../references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
-<li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
+<li>Review <a href="/references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li>Skim the <a href="/references/screenshot-guide.html">Screenshot Evidence Guide</a></li>
+<li>Review <a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
 <li><a href="https://www.w3.org/WAI/WCAG22/quickref/">WCAG 2.2 Quick Reference</a></li>
 </ul>
 <h3 id="accessible-error-handling-1"><a class="header" href="#accessible-error-handling-1">Accessible Error Handling</a></h3>
