--- a/wk09/wk9-lab1-eval-plan-instrumentation.html
+++ b/wk09/wk9-lab1-eval-plan-instrumentation.html
@@ -191,8 +191,8 @@
 <li>Pull Week 9 starter repo branch (baseline instrumentation stubs):</li>
 <li><a href="https://www.nngroup.com/articles/usability-testing-101/">Nielsen Norman Group: How to Conduct a Usability Test</a></li>
 <li><a href="https://www.w3.org/WAI/test-evaluate/metrics/">W3C: Measuring Accessibility</a></li>
-<li>Review <a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
-<li>Review <a href="/references/consent-pii-faq.html">Consent and PII FAQ</a></li>
+<li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
+<li>Review <a href="../references/consent-pii-faq.html">Consent and PII FAQ</a></li>
 </ul>
 <p>📖 <strong>Contextual</strong>:</p>
 <ul>
@@ -231,7 +231,7 @@ By the end of this session, you will have:</p>
 <li>Verified instrumentation captures data correctly for JS-on and JS-off paths</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="/references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO1</strong>: Differentiate people-centred methods — evidenced by method selection rationale</li>
 <li><strong>LO8</strong>: Design and execute evaluation — evidenced by protocol + metrics + instrumentation</li>
@@ -355,7 +355,7 @@ Success: Reports correct count within 2 minutes, no validation errors
 </code></pre>
 <p>✅ Anonymous, minimal, fit-for-purpose</p>
 <p><strong>UK context</strong>: Data Protection Act 2018 + UK GDPR require <strong>lawful basis</strong> for processing. Low-risk peer studies at universities typically use "legitimate interest" or "consent" basis. <strong>Must document</strong> in protocol.</p>
-<p>🔗 Review <a href="/references/consent-pii-faq.html">Consent and PII FAQ</a> for full guidance
+<p>🔗 Review <a href="../references/consent-pii-faq.html">Consent and PII FAQ</a> for full guidance
 🔗 <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/accountability-and-governance/guide-to-accountability-and-governance/accountability-and-governance/data-protection-by-design-and-default/">ICO: Privacy by Design</a></p>
 </blockquote>
 <h3 id="median-vs-mean"><a class="header" href="#median-vs-mean">Median vs Mean</a></h3>
@@ -583,7 +583,7 @@ Task order and timing planned</li>
 <p><strong>Create <code>wk09/lab-wk9/research/measures.md</code></strong>:</p>
 <pre><code class="language-markdown"># Metrics Definitions — Week 9
 
-Reference: [Evaluation Metrics Quick Reference](/references/evaluation-metrics-quickref.md)
+Reference: [Evaluation Metrics Quick Reference](../references/evaluation-metrics-quickref.md)
 
 ---
 
@@ -1550,8 +1550,8 @@ EOF
 <h2 id="further-reading--resources"><a class="header" href="#further-reading--resources">Further Reading &amp; Resources</a></h2>
 <h3 id="essential"><a class="header" href="#essential">Essential</a></h3>
 <ul>
-<li><a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> — Median, MAD, error rate calculations</li>
-<li><a href="/references/consent-pii-faq.html">Consent and PII FAQ</a> — PII definitions, opt-out procedures</li>
+<li><a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> — Median, MAD, error rate calculations</li>
+<li><a href="../references/consent-pii-faq.html">Consent and PII FAQ</a> — PII definitions, opt-out procedures</li>
 <li><a href="https://www.nngroup.com/articles/how-many-test-users/">Nielsen: How Many Test Users?</a> — 5 users find 85% of issues</li>
 </ul>
 <h3 id="hci-evaluation-methods"><a class="header" href="#hci-evaluation-methods">HCI Evaluation Methods</a></h3>
