--- a/wk11/wk11-lab1-studio-crit.html
+++ b/wk11/wk11-lab1-studio-crit.html
@@ -194,8 +194,8 @@
 </ul>
 <p>📖 <strong>Quick reference</strong></p>
 <ul>
-<li><a href="/references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
-<li><a href="/references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
+<li><a href="../references/assistive-testing-checklist.html">Assistive Testing Checklist</a></li>
+<li><a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a></li>
 </ul>
 <hr />
 <h2 id="introduction-from-evidence-to-narrative"><a class="header" href="#introduction-from-evidence-to-narrative">Introduction: From Evidence to Narrative</a></h2>
@@ -216,8 +216,15 @@
 <blockquote>
 <p><strong>Visual</strong>: Evidence-led critique loop</p>
 </blockquote>
-<p>{{#include /references/visuals/crit-loop.md}}</p>
-<p><small>See <a href="/references/process-visuals.html#crit-loop">Process Visuals</a> for captioned steps.</small></p>
+<pre class="mermaid">graph TD
+  Present[Evidence-led demo]
+  Present --&gt; Feedback[Peer &amp; staff critique]
+  Feedback --&gt; Notes[Crit notes &amp; backlog updates]
+  Notes --&gt; Portfolio[Portfolio &amp; wrap-up]
+  Portfolio --&gt; Plan[Semester 2 planning]
+  Plan --&gt; Present
+</pre>
+<p><small>See <a href="../references/process-visuals.html#crit-loop">Process Visuals</a> for captioned steps.</small></p>
 <hr />
 <h2 id="learning-focus"><a class="header" href="#learning-focus">Learning Focus</a></h2>
 <h3 id="lab-objectives"><a class="header" href="#lab-objectives">Lab Objectives</a></h3>
@@ -230,7 +237,7 @@
 <li>Documented crit insights for portfolio</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="/references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO11</strong>: Collaborate in teams — evidenced by peer critique participation</li>
 <li><strong>LO12</strong>: Demonstrate professionalism — evidenced by constructive feedback + respectful critique
@@ -240,7 +247,7 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 <h2 id="key-concepts"><a class="header" href="#key-concepts">Key Concepts</a></h2>
 <h3 id="design-critique"><a class="header" href="#design-critique">Design Critique</a></h3>
 <blockquote>
-<p><strong>Design Critique</strong> (<a href="/references/glossary.html">Glossary</a>)</p>
+<p><strong>Design Critique</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Structured peer review of design work. <strong>Not personal feedback</strong>—focuses on work, evidence, impact.</p>
 <p><strong>Characteristics</strong></p>
 <ul>
@@ -271,7 +278,7 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </blockquote>
 <h3 id="evidence-led-presentation"><a class="header" href="#evidence-led-presentation">Evidence-Led Presentation</a></h3>
 <blockquote>
-<p><strong>Evidence-Led Presentation</strong> (<a href="/references/glossary.html">Glossary</a>)</p>
+<p><strong>Evidence-Led Presentation</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Presentation style where every claim is backed by artifacts (data, screenshots, quotes).</p>
 <p><strong>Structure</strong></p>
 <ol>
@@ -292,7 +299,7 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </blockquote>
 <h3 id="accessibility-demonstration"><a class="header" href="#accessibility-demonstration">Accessibility Demonstration</a></h3>
 <blockquote>
-<p><strong>Accessibility Demonstration</strong> (<a href="/references/glossary.html">Glossary</a>)</p>
+<p><strong>Accessibility Demonstration</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Live proof that inclusive design works. <strong>Show, don't tell</strong>.</p>
 <p><strong>Examples</strong></p>
 <ul>
@@ -318,7 +325,7 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 </blockquote>
 <h3 id="constructive-feedback"><a class="header" href="#constructive-feedback">Constructive Feedback</a></h3>
 <blockquote>
-<p><strong>Constructive Feedback</strong> (<a href="/references/glossary.html">Glossary</a>)</p>
+<p><strong>Constructive Feedback</strong> (<a href="../references/glossary.html">Glossary</a>)</p>
 <p>Feedback that helps recipient improve. Has three parts: observation + impact + suggestion.</p>
 <p><strong>Formula</strong></p>
 <ol>
