--- a/wk11/wk11-lab2-wrapup-portfolio.html
+++ b/wk11/wk11-lab2-wrapup-portfolio.html
@@ -237,7 +237,7 @@
 <li>Finalised portfolio with reflections</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="/references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO12</strong>: Demonstrate professionalism — evidenced by complete, honest self-assessment</li>
 <li><strong>All 13 LOs</strong> — evidenced by portfolio demonstrating cumulative achievement across Weeks 6-11</li>
@@ -957,7 +957,7 @@ cp task2-submission.zip task2-submission-2025-01-17.zip
 <strong>Materials</strong>: Lab notes from Weeks 6–11, backlog, peer feedback</p>
 <h3 id="step-1-self-assessment--learning-outcomes"><a class="header" href="#step-1-self-assessment--learning-outcomes">Step 1: Self-Assessment — Learning Outcomes</a></h3>
 <p>Review your evidence against all <strong>13 HCI Learning Outcomes</strong> you've addressed across Weeks 6-11. Rate your confidence (1 = not confident, 5 = very confident) and note where the evidence lives.</p>
-<p>See <a href="/references/learning-outcomes.html">Learning Outcomes Reference</a> for full LO definitions.</p>
+<p>See <a href="../references/learning-outcomes.html">Learning Outcomes Reference</a> for full LO definitions.</p>
 <div class="table-wrapper"><table><thead><tr><th>LO</th><th>Outcome</th><th>Confidence (1–5)</th><th>Evidence Location</th></tr></thead><tbody>
 <tr><td><strong>LO1</strong></td><td>Differentiate people-centred methods</td><td>☐☐☐☐☐</td><td>W6 L2 job stories, W9 L1 eval plan</td></tr>
 <tr><td><strong>LO2</strong></td><td>Design and conduct needs-finding</td><td>☐☐☐☐☐</td><td>W6 L2 consent protocol</td></tr>
