--- a/wk07/wk7-lab2-audit-backlog-fix.html
+++ b/wk07/wk7-lab2-audit-backlog-fix.html
@@ -239,7 +239,7 @@
 <li>Implemented one priority accessibility fix with regression testing</li>
 </ul>
 <h3 id="learning-outcomes-addressed"><a class="header" href="#learning-outcomes-addressed">Learning Outcomes Addressed</a></h3>
-<p>This lab contributes to the following module Learning Outcomes (<a href="/references/learning-outcomes.html">full definitions</a>):</p>
+<p>This lab contributes to the following module Learning Outcomes (<a href="../references/learning-outcomes.html">full definitions</a>):</p>
 <ul>
 <li><strong>LO4</strong>: Evaluate for accessibility — evidenced by axe audit + WCAG mapping</li>
 <li><strong>LO6</strong>: Apply iterative design — evidenced by fix implementation</li>
