deploy: julianbrooks/comp2850-hci-mdbook@b6550875d2e0b81ec84a6adcf3a7cea05a36a838

--- a/print.html
+++ b/print.html
@@ -13908,15 +13908,15 @@ A: Unlikely if you tested with axe DevTools + keyboard + SR. Revisit Week 7 audi
 </ul>
 <hr />
 <h2 id="module-aims-not-learning-outcomes"><a class="header" href="#module-aims-not-learning-outcomes">Module Aims (Not Learning Outcomes)</a></h2>
-<p>These <strong>four aims</strong> appear on the homepage (<code>index.md</code>). They are <strong>broad aspirational statements</strong> about what the module enables students to do. They are <strong>not</strong> the same as Learning Outcomes (which are specific and measurable).</p>
-<p><strong>Current wording</strong> (to be updated with correct terminology):</p>
+<p>These <strong>four aims</strong> appear on the homepage.<br />
+They are <strong>broad aspirational statements</strong> about what the module
+enables you to do. They are <strong>not</strong> the same as Learning Outcomes (which are specific and measurable).</p>
 <ol>
 <li>Apply HCI principles to design inclusive interfaces</li>
 <li>Evaluate accessibility and ethics in interactive systems</li>
 <li>Implement server-first architecture with progressive enhancement</li>
 <li>Communicate design decisions with evidence</li>
 </ol>
-<p><strong>Recommendation</strong>: Relabel this section on the homepage as <strong>"Module Aims"</strong> (not "Learning Outcomes") and add a link to this reference page.</p>
 <hr />
 <h2 id="terminology-clarification"><a class="header" href="#terminology-clarification">Terminology Clarification</a></h2>
 <h3 id="module-aims-1"><a class="header" href="#module-aims-1">Module Aims</a></h3>
@@ -14036,11 +14036,12 @@ A: Unlikely if you tested with axe DevTools + keyboard + SR. Revisit Week 7 audi
 <hr />
 <h2 id="version-history"><a class="header" href="#version-history">Version History</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Version</th><th>Date</th><th>Changes</th></tr></thead><tbody>
-<tr><td>1.0</td><td>2025-10-15</td><td>Initial definitive reference created; standardized terminology; mapped 13 HCI LOs + 10 module LOs</td></tr>
+<tr><td>0.2</td><td>2025-11-07</td><td>Initial definitive reference created; standardised terminology; mapped 13 HCI LOs + 10 module LOs</td></tr>
+<tr><td>0.1</td><td>2025-10-29</td><td>Initial draft created; added learning outcomes, aims, and cross-reference table</td></tr>
 </tbody></table>
 </div>
 <hr />
-<p><strong>Questions?</strong> See <a href="references/glossary.html">Glossary</a> for term definitions or contact module lead.</p>
+<p><strong>Questions?</strong> See <a href="references/glossary.html">Glossary</a> for term definitions or contact module teaching staff.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="serverfirst-a-practical-guide-for-comp2850-hci"><a class="header" href="#serverfirst-a-practical-guide-for-comp2850-hci">Server‑First: A Practical Guide for COMP2850 (HCI)</a></h1>
 <blockquote>
 <p><strong>TL;DR</strong>: Render HTML on the <strong>server</strong> by default. Add interactivity as <strong><a href="references/glossary.html#progressive-enhancement">progressive enhancement</a></strong> using <a href="references/glossary.html#htmx">HTMX</a>. If JavaScript is off, everything still works. Use <strong><a href="references/glossary.html#prg">PRG (Post/Redirect/Get)</a></strong> for forms, return <strong><a href="references/glossary.html#fragment">fragments</a></strong> to HTMX when it asks, and make <strong><a href="references/glossary.html#accessibility">accessibility</a></strong> non‑negotiable.</p>
