--- a/references/learning-outcomes.html
+++ b/references/learning-outcomes.html
@@ -331,15 +331,15 @@
 </ul>
 <hr />
 <h2 id="module-aims-not-learning-outcomes"><a class="header" href="#module-aims-not-learning-outcomes">Module Aims (Not Learning Outcomes)</a></h2>
-<p>These <strong>four aims</strong> appear on the homepage (<code>index.md</code>). They are <strong>broad aspirational statements</strong> about what the module enables students to do. They are <strong>not</strong> the same as Learning Outcomes (which are specific and measurable).</p>
-<p><strong>Current wording</strong> (to be updated with correct terminology):</p>
+<p>These <strong>four aims</strong> appear on the homepage.<br />
+They are <strong>broad aspirational statements</strong> about what the module
+enables you to do. They are <strong>not</strong> the same as Learning Outcomes (which are specific and measurable).</p>
 <ol>
 <li>Apply HCI principles to design inclusive interfaces</li>
 <li>Evaluate accessibility and ethics in interactive systems</li>
 <li>Implement server-first architecture with progressive enhancement</li>
 <li>Communicate design decisions with evidence</li>
 </ol>
-<p><strong>Recommendation</strong>: Relabel this section on the homepage as <strong>"Module Aims"</strong> (not "Learning Outcomes") and add a link to this reference page.</p>
 <hr />
 <h2 id="terminology-clarification"><a class="header" href="#terminology-clarification">Terminology Clarification</a></h2>
 <h3 id="module-aims"><a class="header" href="#module-aims">Module Aims</a></h3>
@@ -459,11 +459,12 @@
 <hr />
 <h2 id="version-history"><a class="header" href="#version-history">Version History</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Version</th><th>Date</th><th>Changes</th></tr></thead><tbody>
-<tr><td>1.0</td><td>2025-10-15</td><td>Initial definitive reference created; standardized terminology; mapped 13 HCI LOs + 10 module LOs</td></tr>
+<tr><td>0.2</td><td>2025-11-07</td><td>Initial definitive reference created; standardised terminology; mapped 13 HCI LOs + 10 module LOs</td></tr>
+<tr><td>0.1</td><td>2025-10-29</td><td>Initial draft created; added learning outcomes, aims, and cross-reference table</td></tr>
 </tbody></table>
 </div>
 <hr />
-<p><strong>Questions?</strong> See <a href="glossary.html">Glossary</a> for term definitions or contact module lead.</p>
+<p><strong>Questions?</strong> See <a href="glossary.html">Glossary</a> for term definitions or contact module teaching staff.</p>
 
                     </main>
 
